# tmaven

./: .gitignore  changelog.md  how_to_use_pup.md  pyproject.toml  readme.md  run.py  setup.cfg  setup.py  test_script.py  todo.md
docs/: _quarto.yml  about.html  develop.html  example1.qmd  extra_hmms.html  index.html  info_models.html  info_molecule.html  info_molecule.qmd  info_priors.html  info_pysmd.html  install.html  install.qmd  robots.txt  search.json  shortcuts.html  sitemap.xml  tutorial_quickstart.html
docs/_site/: about.html  develop.html  example1.html  extra_hmms.html  index.html  info_molecule.html  info_priors.html  install.html  search.json  sitemap.xml  somestuff.html
docs/_site/examples/: example_smdload.html
docs/examples/: example_defaultprefs.html  example_entropyplot.html  example_rastergramplot.html  example_runhhmm.html  example_script1.html  example_smdload.html  run_hhmm.py  test_timing.py
docs/quarto/: _quarto.yml  about.qmd  develop.qmd  extra_hmms.qmd  info_models.qmd  info_priors.html  info_priors.qmd  info_pysmd.html  info_pysmd.qmd  install.qmd  shortcuts.qmd  styles.css  tutorial_quickstart.qmd
docs/quarto/examples/: example_defaultprefs.qmd  example_entropyplot.qmd  example_rastergramplot.qmd  example_runhhmm.qmd  example_script1.qmd  plot_entropy.py  plot_rastergram.py  run_hhmm.py
docs/quarto/tmanual/: _quarto.yml  modelling.qmd  plotting.qmd
docs/site_libs/bootstrap/: bootstrap.min.css
docs/tMANUAL/: index.html  installing.html  modelling.html  navigating.html  plotting.html  preprocessing.html  readme.html  references.html  web_intro.html
docs/tmanual/: index.html  installing.html  modelling.html  navigating.html  plotting.html  preprocessing.html  readme.html  references.html  web_intro.html
docs_src/: _quarto.yml  develop.qmd  readme.md
docs_src/examples/: example_smdload.qmd
graphics/: logo.afdesign
notes/: organization.md  test_script.py  todo.md
tmanual/tmanual_latex/: ModelingSettingsEx.jp2  main.tex
tmaven/: __init__.py  __main__.py  app.py  maven.py
tmaven/analysis_plots/: hist_1d.py  hist_2d.py  sources.py  ui_plots.py  vb_states.py
tmaven/analysis_plots/autocorr/: autocorr.py
tmaven/controllers/: __init__.py  cull.py  data.py  io.py  normalise.py  normalize.py  prefs.py  scripts.py  selection.py
tmaven/controllers/analysis_plots/: .___init__.py  __init__.py  analysisplots.py  base.py  data_hist1d.py  data_hist2d.py  data_tdp.py  fret_hist1d.py  fret_hist2d.py  fret_tdp.py  model_vbstates.py  survival_dwell.py  tm_hist.py
tmaven/controllers/corrections/: ._corrections.py  ck_filter.py  corrections.py
tmaven/controllers/io_special/: io_spartan.py
tmaven/controllers/modeler/: ._gmm_ml.py  ._hmm_eb.py  ._model_container.py  ._modeler.py  dwell.py  dwells.py  gmm_ml.py  gmm_vb.py  hhmm_vmp.py  hmm_eb.py  hmm_ml.py  hmm_vb.py  hmm_vb_consensus.py  kmeans.py  model_container.py  modeler.py  modeler_io.py  threshold.py
tmaven/controllers/photobleaching/: photobleaching.py  photobleaching_controller.py
tmaven/controllers/trace_filter/: model_selection.py  trace_filter.py
tmaven/interface/: ._stylesheet.py  ._ui_dwell.py  ._ui_io.py  main_window.py  stylesheet.py  ui_analysisplots.py  ui_corrections.py  ui_cull.py  ui_dwell.py  ui_experimental.py  ui_io.py  ui_normalize.py  ui_photobleaching.py  ui_scripts.py  ui_selection.py  ui_trace_filter.py  viewer_molecules.py  viewer_prefs.py  viewer_smd_info.py
tmaven/interface/hdf5_view/: hdf5_datasetgroup_load.py  hdf5_fileview.py  hdf5_primative.py  hdf5_view.py
tmaven/interface/modeler/: ._launchers.py  dialogs.py  launchers.py  ui_modeler.py
tmaven/pysmd/: __init__.py  pysmd.py  readme.md
tmaven/trace_plot/: fret_plot.py  multi_plot.py  nd_plot.py  plot_container.py
website/: _quarto.yml  index.qmd  info_pysmd.qmd  install.qmd
website/examples/: example_smdload.qmd
website/tMANUAL/: index.qmd  modelling.qmd  navigating.qmd  plotting.qmd  web_intro.qmd
website/tmanual/: bibliography.bib  installing.qmd  navigating.qmd  plotting.qmd  preprocessing.qmd  readme.md
(+14 files in other folders)
