[metadata]
name = tmaven
version = attr: tmaven.__version__
description = attr: tmaven.__description__
author = attr: tmaven.__author__
license = attr: tmaven.__license__
url = attr: tmaven.__url__
keywords = gui, single molecule, science, chemistry, physics, biology
long_description = file: readme.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Biology
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    Environment :: X11 Applications :: Qt

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    numpy>=1.21.0,<2.0.0
    numba>=0.51.0
    scipy>=1.7.0
    matplotlib>=3.5.0
    h5py>=3.6.0
    PyQt5>=5.15.0
    appdirs
    importlib_resources
    biasd @ git+https://github.com/ckinzthompson/biasd.git@main
python_requires = >=3.6

[options.extras_require]
docs =

[options.package_data]
* = *.png, *.svg

[options.entry_points]
console_scripts =
    tmaven=tmaven.bin.tmaven_gui:main

[options.packages.find]
where = .